<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Inicio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/total_section_height"
        android:background="@color/grey"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/total_label"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_total" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/solo_un_dado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="@dimen/margin_top_large"
            android:visibility="visible"
            >

            <ImageView
                android:id="@+id/foto_central1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_large"
                android:src="@drawable/d4_sin_fondo"
                android:adjustViewBounds="true"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dos_dado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="@dimen/margin_top_large"
            android:visibility="invisible"
            >

            <ImageView
                android:id="@+id/foto_central2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_large"
                android:src="@drawable/d4_sin_fondo"
                android:adjustViewBounds="true"/>
            <Space
                android:layout_width="@dimen/image_dice_height"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/foto_central3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_large"
                android:src="@drawable/d4_sin_fondo"
                android:adjustViewBounds="true"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/space_images"
            >
            <EditText
                android:id="@+id/num_dados"
                android:layout_width="@dimen/width_medium"
                android:layout_height="@dimen/height_medium"
                android:background="@color/grey"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text=""
                android:inputType="number"
                />
            <Space
                android:layout_width="@dimen/width_small"
                android:layout_height="match_parent"/>
            <EditText
                android:id="@+id/tipo_dados"
                android:layout_width="@dimen/width_medium"
                android:layout_height="@dimen/height_medium"
                android:background="@color/grey"
                android:text=""
                android:textAlignment="center"
                android:enabled="false"
                android:textColor="@color/white"
                />
            <Space
                android:layout_width="@dimen/width_small"
                android:layout_height="match_parent"/>

            <EditText
                android:id="@+id/lanzar_dados"
                android:layout_width="@dimen/width_medium"
                android:layout_height="@dimen/height_medium"
                android:background="@color/grey"
                android:focusable="false"
                android:textColor="@color/white"
                android:text="Lanzar"
                android:textAlignment="center"
                android:clickable="true"
                />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dices_section_height"
        android:background="@color/grey"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Space
            android:layout_width="@dimen/space_images"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/d4"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_dice_height"
            android:src="@drawable/d4_sin_fondo"
            android:adjustViewBounds="true"
            android:contentDescription="@string/d4_desc"
            android:focusable="true"
            android:clickable="true"
            />
        <Space
            android:layout_width="@dimen/space_images"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/d6"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_dice_height"
            android:src="@drawable/d6_sin_fondo"
            android:adjustViewBounds="true"
            android:contentDescription="@string/d6_desc"
            android:focusable="true"
            android:clickable="true"
            />
        <Space
            android:layout_width="@dimen/space_images"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/d8"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_dice_height"
            android:src="@drawable/d8_sin_fondo"
            android:adjustViewBounds="true"
            android:contentDescription="@string/d8_desc"
            android:focusable="true"
            android:clickable="true"
            />
        <Space
            android:layout_width="@dimen/space_images"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/d10"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_dice_height"
            android:src="@drawable/d10_sin_fondo"
            android:adjustViewBounds="true"
            android:contentDescription="@string/d10_desc"
            android:focusable="true"
            android:clickable="true"
            />
        <Space
            android:layout_width="@dimen/space_images"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/d12"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_dice_height"
            android:src="@drawable/d12_sin_fondo"
            android:adjustViewBounds="true"
            android:contentDescription="@string/d12_desc"
            android:focusable="true"
            android:clickable="true"
            />
        <Space
            android:layout_width="@dimen/space_images"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/d20"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_dice_height"
            android:src="@drawable/d20_sin_fondo"
            android:adjustViewBounds="true"
            android:contentDescription="@string/d20_desc"
            android:focusable="true"
            android:clickable="true"
            />
        <Space
            android:layout_width="@dimen/space_images"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/d100"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_dice_height"
            android:src="@drawable/d100_sin_fondo"
            android:adjustViewBounds="true"
            android:contentDescription="@string/d100_desc"
            android:focusable="true"
            android:clickable="true"
            />
        <Space
            android:layout_width="@dimen/space_images"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>